replace tablesorter filtering with jquery.filtertable lib, fixes #8110

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -335,4 +335,8 @@ table.documents {
     td, th {
         vertical-align: top;
     }
+
+    &.flat td.filter-match {
+        background-color: @yellow-20;
+    }
 }
