trunk: imported solution to biest 8096, re #8096

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -340,3 +340,13 @@ table.documents {
         background-color: @yellow-20;
     }
 }
+
+
+/*
+For the file and folder table in the selection dialogs
+when adding a file or copying/moving things:
+*/
+td.document-icon {
+    max-width: 40px;
+    width: 40px;
+}
