update css, refs #8075

--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -99,6 +99,10 @@ a.button, button.button {
   .button-with-icon("add", "clickable", "info_alt");
 }
 
+.button.download {
+  .button-with-icon("download", "clickable", "info_alt");
+}
+
 /* Grouped Buttons */
 .button-group {
     display: inline-block;
