--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -86,6 +86,10 @@
               .button-with-icon("decline", "clickable", "info_alt");
             }
 
+            &.download {
+              .button-with-icon("download", "clickable", "info_alt");
+            }
+
             &:before {
                 margin-left: -5px;
                 margin-top: 2px;
