correctly provide download button icon in dialog, fixes #8075, re #8122

--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -83,6 +83,10 @@ a.button, button.button {
   .button-with-icon("decline", "clickable", "info_alt");
 }
 
+.button.download {
+  .button-with-icon("download2", "clickable", "info_alt");
+}
+
 .button.edit {
   .button-with-icon("edit", "clickable", "info_alt");
 }
