--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -87,7 +87,7 @@
             }
 
             &.download {
-              .button-with-icon("download", "clickable", "info_alt");
+              .button-with-icon("download2", "clickable", "info_alt");
             }
 
             &:before {
