--- a/public/assets/stylesheets/less/buttons.less
+++ b/public/assets/stylesheets/less/buttons.less
@@ -53,7 +53,7 @@ a.button, button.button {
 .button-with-empty-icon {
     white-space: nowrap;
 
-    &:before {
+    &::before {
         background: no-repeat;
         content: " ";
         float: left;
@@ -65,13 +65,20 @@ a.button, button.button {
 
 .button-with-icon(@icon, @role, @roleOnHover) {
     &:extend(.button-with-empty-icon);
-    &:before {
-        &:extend(.button-with-empty-icon:before);
+    &::before {
+        &:extend(.button-with-empty-icon::before);
         .background-icon(@icon, @role);
     }
 
-    &:hover:before {
+    &:hover::before {
         .background-icon(@icon, @roleOnHover);
+    }
+
+    &.disabled,
+    &[disabled] {
+        &:hover::before {
+            .background-icon(@icon, @role);
+        }
     }
 }
 
