--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -71,7 +71,8 @@
             .button(); // Include button mixin
             font-weight: bold;
 
-            &.accept, &.cancel {
+            &.accept,
+            &.cancel {
                 padding-right: 23px;
             }
             &:last-child {
@@ -90,7 +91,18 @@
               .button-with-icon("download2", "clickable", "info_alt");
             }
 
-            &:before {
+            &.disabled,
+            &[disabled] {
+                background: @light-gray-color-20;
+                cursor: default;
+                opacity: 0.65;
+
+                &:hover {
+                    color: @base-color;
+                }
+            }
+
+            &::before {
                 margin-left: -5px;
                 margin-top: 2px;
             }
