resrict image max-width definitions to post body, re #7036, fixes #8080

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -55,7 +55,7 @@ html.no-js #forum {
         display: inline;
     }
 
-    img {
+    .postbody img {
         border: none;
         max-width: 100%;
         height: auto;
