course members: display inactive mail icon also for the current user, fixes #8137

--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -47,6 +47,10 @@
         padding: 3px 0;
         a {
             padding-left: 0;
+
+            &[disabled] {
+                color: @dark-gray-color-80;
+            }
         }
 
         img, svg, .action-menu-no-icon, input[type="image"] {
