--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -166,9 +166,9 @@ div#sidebar-navigation {
         width: @width;
     }
 
-    .course-avatar-medium { 
+    .course-avatar-medium, .stream-avatar-medium {
         max-width: 75px;
-        height: 75px; 
+        height: 75px;
     }
     .sidebar-widget, .sidebar-widget-placeholder {
         background: #fff;
