--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -166,7 +166,7 @@ div#sidebar-navigation {
         width: @width;
     }
 
-    .course-avatar-medium, .stream-avatar-medium {
+    .course-avatar-medium, .stream-avatar-medium, .avatar-medium {
         max-width: 75px;
         height: 75px;
     }
