fix messed up table headers when sorting via js, re #8115

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -219,6 +219,10 @@ tr.sortable {
 
     th.sortasc,
     th.sortdesc {
+        .tablesorter-header-inner {
+            display: inline-block;
+        }
+
         &::after {
             .square(16px);
             background-position: center;
