fix messed up css (which was missing in less) from [46081], re #8189, re #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -244,10 +244,10 @@
                     margin-top: auto;
                     max-width: 25px;
                     padding-right: 5px;
-                    width: 24px;
+                    width: 40px;
 
                     a {
-                        .background-icon('arr_1right', 'clickable');
+                        .background-icon('arr_1right', 'clickable', 24);
                         .square(24px);
                         display: inline-block;
                     }
