--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -421,10 +421,9 @@ td.tree-elbow-end svg {
 .collapsable > .collapsed tr:not(.header-row) {
   display: none;
 }
-.collapsable > .collapsed .toggle-indicator ~ *:not(.dont-hide) {
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
+.collapsable > .collapsed .toggle-indicator ~ *:not(.dont-hide) > * {
+  opacity: 0;
+  pointer-events: none;
 }
 * + html .collapsable .collapsed .header-row {
   display: inline-block !important;
