--- a/public/assets/stylesheets/widgets.css
+++ b/public/assets/stylesheets/widgets.css
@@ -60,27 +60,25 @@
 .grid-stack-item-content .ui-priority-secondary {
   opacity: .7;
   filter: alpha(opacity=70);
-  /* support: IE8 */
   font-weight: normal;
 }
 .grid-stack-item-content .ui-state-disabled {
   opacity: .35;
   filter: alpha(opacity=35);
-  /* support: IE8 */
   background-image: none;
 }
 .grid-stack-item-content {
   background: #fff;
 }
 .widget-header {
-  background-color: #899ab9;
+  background-color: #899bba;
   color: white;
   font-size: 1.3em;
   line-height: 30px;
   text-align: center;
 }
 .grid-stack-item-content .ui-state-active {
-  background-color: #899ab9;
+  background-color: #899bba;
   color: white;
 }
 .grid-stack-item-content .ui-state-hover,
@@ -111,7 +109,7 @@
   text-align: center;
   color: white;
   font-size: 1.3em;
-  background-color: #899ab9;
+  background-color: #899bba;
 }
 .grid-stack-item-content a {
   color: #28497c;
@@ -167,7 +165,7 @@
   /* Non-prefixed version, currently
                                     supported by Chrome and Opera */
   background-color: #fce2cc;
-  color: #6d727a;
+  color: #6d737b;
 }
 .grid-stack.admin-mode .widget-content > * {
   pointer-events: none;
@@ -377,7 +375,7 @@
 .grid-stack-item-content.widget-disabled .widget-title,
 .grid-stack-item-content.widget-disabled .widget-content,
 .grid-stack-item-content.widget-disabled .widget-actions {
-  background-color: #e2e3e4;
+  background-color: #e2e3e5;
 }
 .grid-stack-item-content.widget-disabled .widget-title {
   color: #000000;
@@ -803,7 +801,7 @@
   white-space: nowrap;
 }
 .tabbable-widget > nav > a:not(:last-child) {
-  border-right: 1px solid #b1b4b8;
+  border-right: 1px solid #b1b4b9;
 }
 .tabbable-widget > nav > a:hover:not(.active) {
   background-color: rgba(212, 219, 229, 0.8);
@@ -845,8 +843,8 @@ table.widget-container-preview td {
   text-align: center;
 }
 table.widget-container-preview td:not(.empty) {
-  background-color: #e2e3e4;
-  border: 1px solid #6d727a;
+  background-color: #e2e3e5;
+  border: 1px solid #6d737b;
 }
 form.add-widget .position input[type="radio"] {
   margin-left: 2.5em;
@@ -863,7 +861,7 @@ form.add-widget .position input[type="radio"] + label {
   background-position: left 1em center;
   background-repeat: no-repeat;
   background-size: 2em;
-  border: 1px solid #6d727a;
+  border: 1px solid #6d737b;
   cursor: pointer;
   font-size: 1.5em;
   padding: 1em 0;
