--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -30,6 +30,10 @@ form.default {
         &.size-l {
             max-width: @max-width-l;
         }
+
+        &[readonly] {
+            background-color: @light-gray-color-20;
+        }
     }
 
     input[type=date], input[type=number], input[type=time], input[type=tel]  {
