--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -125,6 +125,11 @@ form.default {
         padding: 10px;
         padding-top: 5px;
         padding-bottom: 5px;
+
+        .button {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
     }
 
     //Special inputs
