--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -570,6 +570,18 @@ table.default {
             min-height: 100px;
         }
     }
+
+    tfoot {
+        // Fix button and select alignment
+        select {
+            vertical-align: middle;
+        }
+        // Adjust button margins
+        .button {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+    }
 }
 
 table.withdetails {
