dashboard: disable border color change on hover for now, fixes #8332

--- a/public/assets/stylesheets/widgets.less
+++ b/public/assets/stylesheets/widgets.less
@@ -175,9 +175,9 @@
     border: 1px solid @base-color-20;
     .transition(border 300ms);
 
-    &:hover {
-        border-color: @base-color;
-    }
+    // &:hover {
+    //     border-color: @base-color;
+    // }
 
 //    .transition(all 300ms);
 
