--- a/public/assets/stylesheets/widgets.css
+++ b/public/assets/stylesheets/widgets.css
@@ -60,25 +60,27 @@
 .grid-stack-item-content .ui-priority-secondary {
   opacity: .7;
   filter: alpha(opacity=70);
+  /* support: IE8 */
   font-weight: normal;
 }
 .grid-stack-item-content .ui-state-disabled {
   opacity: .35;
   filter: alpha(opacity=35);
+  /* support: IE8 */
   background-image: none;
 }
 .grid-stack-item-content {
   background: #fff;
 }
 .widget-header {
-  background-color: #899bba;
+  background-color: #899ab9;
   color: white;
   font-size: 1.3em;
   line-height: 30px;
   text-align: center;
 }
 .grid-stack-item-content .ui-state-active {
-  background-color: #899bba;
+  background-color: #899ab9;
   color: white;
 }
 .grid-stack-item-content .ui-state-hover,
@@ -109,7 +111,7 @@
   text-align: center;
   color: white;
   font-size: 1.3em;
-  background-color: #899bba;
+  background-color: #899ab9;
 }
 .grid-stack-item-content a {
   color: #28497c;
@@ -165,7 +167,7 @@
   /* Non-prefixed version, currently
                                     supported by Chrome and Opera */
   background-color: #fce2cc;
-  color: #6d737b;
+  color: #6d727a;
 }
 .grid-stack.admin-mode .widget-content > * {
   pointer-events: none;
@@ -298,9 +300,6 @@
   -o-transition: border 300ms;
   transition: border 300ms;
 }
-.grid-stack-item-content:hover {
-  border-color: #28497c;
-}
 .grid-stack-item-content.may-drop .widget-header,
 .grid-stack-item-content.may-drop .widget-content {
   background-color: #d60000 !important;
@@ -375,7 +374,7 @@
 .grid-stack-item-content.widget-disabled .widget-title,
 .grid-stack-item-content.widget-disabled .widget-content,
 .grid-stack-item-content.widget-disabled .widget-actions {
-  background-color: #e2e3e5;
+  background-color: #e2e3e4;
 }
 .grid-stack-item-content.widget-disabled .widget-title {
   color: #000000;
@@ -801,7 +800,7 @@
   white-space: nowrap;
 }
 .tabbable-widget > nav > a:not(:last-child) {
-  border-right: 1px solid #b1b4b9;
+  border-right: 1px solid #b1b4b8;
 }
 .tabbable-widget > nav > a:hover:not(.active) {
   background-color: rgba(212, 219, 229, 0.8);
@@ -843,8 +842,8 @@ table.widget-container-preview td {
   text-align: center;
 }
 table.widget-container-preview td:not(.empty) {
-  background-color: #e2e3e5;
-  border: 1px solid #6d737b;
+  background-color: #e2e3e4;
+  border: 1px solid #6d727a;
 }
 form.add-widget .position input[type="radio"] {
   margin-left: 2.5em;
@@ -861,7 +860,7 @@ form.add-widget .position input[type="radio"] + label {
   background-position: left 1em center;
   background-repeat: no-repeat;
   background-size: 2em;
-  border: 1px solid #6d737b;
+  border: 1px solid #6d727a;
   cursor: pointer;
   font-size: 1.5em;
   padding: 1em 0;
