pixel tuning, fixes #7893

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -29,6 +29,7 @@
 
     // The actual search input
     #globalsearch-input {
+        height: 29px;
         padding-left: 5px;
         width: @hidden-width;
         .transition(width @transition-duration);
@@ -41,7 +42,7 @@
     #globalsearch-icon {
         margin-left: 5px;
         position: relative;
-        top: 6px;
+        top: 3px;
     }
 
     // Hint toggle text
