--- a/public/assets/stylesheets/less/mobile.less
+++ b/public/assets/stylesheets/less/mobile.less
@@ -17,11 +17,14 @@
     }
     #index, #request_new_password, #web_migrate {
         div.index_container {
-            top: 0;
+            .flex();
+            .flex-direction-column();
+            top: 40px;
 
             .messagebox {
-                margin-top: 120px;
-                margin-left: 20px;
+                margin-bottom: 0;
+                margin-top: 0;
+                width: calc(100% - 74px);
             }
 
             #background-desktop {
@@ -29,16 +32,14 @@
             }
 
             #background-mobile {
-                display: block;
-                margin-top: 85px;
+                display: inherit;
             }
 
             div.index_main {
-                margin-top: 36px;
+                margin-top: 0;
                 padding-left: 20px;
                 padding-right: 20px;
-                position: absolute;
-                top: 200px;
+                position: relative;
                 width: ~"calc(100% - 40px)";
 
                 nav {
