--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7506,11 +7506,7 @@ div.index_container #background-desktop {
 }
 div.index_container #background-mobile {
   display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 150px;
+  height: 200px;
   z-index: -1;
 }
 div.index_container div.messagebox {
@@ -8772,13 +8768,26 @@ table.default tr.subcourses td:nth-child(-n+4) {
   #index div.index_container,
   #request_new_password div.index_container,
   #web_migrate div.index_container {
-    top: 0;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: -webkit-box-flex;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    -moz-box-direction: normal;
+    -moz-box-orient: vertical;
+    -webkit-box-orient: vertical;
+    flex-direction: column;
+    top: 40px;
   }
   #index div.index_container .messagebox,
   #request_new_password div.index_container .messagebox,
   #web_migrate div.index_container .messagebox {
-    margin-top: 120px;
-    margin-left: 20px;
+    margin-bottom: 0;
+    margin-top: 0;
+    width: calc(100% - 74px);
   }
   #index div.index_container #background-desktop,
   #request_new_password div.index_container #background-desktop,
@@ -8788,17 +8797,14 @@ table.default tr.subcourses td:nth-child(-n+4) {
   #index div.index_container #background-mobile,
   #request_new_password div.index_container #background-mobile,
   #web_migrate div.index_container #background-mobile {
-    display: block;
-    margin-top: 85px;
+    display: inherit;
   }
   #index div.index_container div.index_main,
   #request_new_password div.index_container div.index_main,
   #web_migrate div.index_container div.index_main {
-    margin-top: 36px;
+    margin-top: 0;
     padding-left: 20px;
     padding-right: 20px;
-    position: absolute;
-    top: 200px;
     width: calc(100% - 40px);
   }
   #index div.index_container div.index_main nav,
