add role-overview to user-management, re #8356

--- a/public/assets/stylesheets/less/tooltip.less
+++ b/public/assets/stylesheets/less/tooltip.less
@@ -15,7 +15,7 @@
     position: absolute;
     text-align: left;
     text-shadow: 0 1px 0 fade(#fff, 50%);
-    white-space: normal;
+    white-space: pre-line;
     z-index: 10000;
 
     .hyphens();
@@ -29,7 +29,7 @@
             .icon('before', 'info-circle', 'attention');
         }
     }
-    
+
     position: relative;
     .tooltip-content {
         .studip-tooltip;
