fix @import directive, fixes #8365

--- a/public/assets/stylesheets/widgets.less
+++ b/public/assets/stylesheets/widgets.less
@@ -3,7 +3,8 @@
 // @import (reference) "assets/stylesheets/less/jquery-ui/studip.less";
 @import (reference) "less/start.less";
 
-@import "vendor/gridstack-0.3.0.css";
+@import (inline) "vendor/gridstack-0.3.0.css";
+
 .grid-stack-item-content a {
     color: @base-color;
 
